# QtTasks

./: .gitignore
QtimerDemo/: mainwindow.cpp  mainwindow.h
cpp/BaseApp/: main.cpp
projectOne/: dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectOne.pro  secdialog.cpp  secdialog.ui
qml/IntegratinggQmlWithCpp/: CMakeLists.txt  Main.qml  base.cpp  base.h  main.cpp
qml/QProperty/: CMakeLists.txt  Main.qml  baseclass.cpp  baseclass.h  main.cpp
qml/qmlBasicOne/: CMakeLists.txt  Main.qml  baseclass.cpp  baseclass.h  main.cpp
qt/BootUpDefault/: BootUpDefault.pro  Resources.qrc  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/CarDashboard/: CMakeLists.txt
qt/CarDashboard/DashboardUI/: CMakeLists.txt
qt/CarDashboard/Dashboardservices/: CMakeLists.txt
qt/InvoiceGenerator/: InvoiceGenerator.pro  Resources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/MyCarDashboard/: CMakeLists.txt
qt/MyCarDashboard/DashboardServices/: CMakeLists.txt  dashboardservices.cpp  dashboardservices.h
qt/MyCarDashboard/DashboardUI/: CMakeLists.txt  Resources.qrc  customdial.cpp  customdial.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/MyLibDll/: MyLibDll.pro  mylibdll.cpp
qt/OverlayDisplay/: mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/QMetaObjectDetails/: mainwindow.cpp  mainwindow.ui
qt/TestDll/: MyLibDll_global.h  TestDll.pro  main.cpp  mylibdll.h
qt/controlApp/: CMakeLists.txt  Resources.qrc  dialog.ui  frame.cpp  frame.h  frame.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui  secdialog.cpp  secdialog.h  secdialog.ui
qt/controlAppTwo/: Resources.qrc  controlAppTwo.pro  frame.cpp  frame.h  frame.ui  inagessResource.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlay.cpp  overlay.h  overlay.ui  overlaydialog.h  scdialog.cpp  scdialog.h  scdialog.ui
qt/controlAppTwo/Images/: DesignImg.jfif
qt/pdfGenerator/: mainwindow.cpp  mainwindow.h  mainwindow.ui  pdfGenerator.pro
staticLibrary/statLib/: statlib.cpp  statlib.h
staticLibrary/statTest/: main.cpp  statTest.pro
